// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration:: resend SMS mfa code (account creation variant) should return 500 error screen when API call fails 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "create account",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: resend SMS mfa code (account creation variant) should return error when csrf not present 1`] = `
Object {
  "contentId": undefined,
  "taxonomyLevel1": undefined,
  "taxonomyLevel2": undefined,
  "taxonomyLevel3": undefined,
  "taxonomyLevel4": undefined,
  "taxonomyLevel5": undefined,
}
`;

exports[`Integration:: resend SMS mfa code (account creation variant) should return resend mfa code page 1`] = `
Object {
  "contentId": "8247477c-3e33-4dae-9528-22e7ed44efb3",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "create account",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;
